# hpp-environments

./: .git-blame-ignore-revs  .gitlab-ci.yml  CMakeLists.txt  README.md  default.nix  flake.nix  package.xml  pyproject.toml
examples/: buggy.py  buggy_game.py
meshes/: CMakeLists.txt
meshes/buggy/: buggy.dae  buggyBB.dae  buggy_rearwheel.dae  scene.dae  scene.stl  wheel_frontleft.dae  wheel_frontright.dae
meshes/hrp2/: floor.dae
meshes/multicontact/: antfarm_firstLevel.stl  bauzil_ramp.stl  bauzil_ramp_simplified.stl  bauzil_ramp_up.stl  bauzil_stairs_10cm_scale.stl  bauzil_stairs_collision.stl  bridge.stl  car.dae  cave_simplified.stl  cubeWorld3.stl  cube_non_coplanar.stl  cube_non_coplanar2.stl  cube_non_coplanar2_panel.stl  floor_bauzil_obstacles_simu.stl  ground_with_cylinder.stl  maze_easy.stl  maze_hard.stl  obstacle.stl  ori_plinth.stl  plateforme_not_flat.stl  plateforme_surfaces.stl  plateforme_surfaces_scale.stl  platform_hand.stl  random_scene_10x10_V3.stl  random_scene_10x10_V5.stl  rubbles_4.stl  rubbles_stairs_1.stl  rubbles_stairs_2.stl  rubbles_stairs_3.stl  rubbles_stairs_bridge_1.stl  slalom_new.stl  slope_towr.stl  stairs.stl  stairs_towr.stl  test.stl
meshes/ori/: container_floor.stl  modular_palet_flat.blend  modular_palet_flat.blend1  modular_palet_flat_collision.stl  modular_palet_low.stl  modular_palet_low_collision.stl  modular_palet_low_collision_1.stl  modular_palet_low_obstacles_collision.stl  race_slopes_container.stl  slalom1.stl  slalom2.stl
meshes/ur_benchmark/: pokeball.dae
src/: CMakeLists.txt
src/hpp/environments/: __init__.py  robot.py
srdf/: beam.srdf  beam_support.srdf  buggy.srdf  placard.srdf  scene.srdf
srdf/construction_set/: cylinder_08.srdf  cylinder_13.srdf  ground.srdf  sphere.srdf
srdf/drawer_desk/: desk.srdf
srdf/hrp2/: floor_as_mesh.srdf
srdf/multicontact/: bauzil_ramp.srdf  bauzil_ramp_up.srdf  bauzil_stairs.srdf  bridge_towr.srdf  cross_gap.srdf  cubeWorld3.srdf  cubeWorld_nonCoplanar.srdf  cubeWorld_nonCoplanar2.srdf  darpa_no_ctc_mid.srdf  downSlope2.srdf  downSlope_easy.srdf  downSlope_easy20.srdf  floor_bauzil.srdf  ground_jump_bar.srdf  ground_jump_easy.srdf  ground_with_bridge.srdf  maze_hard.srdf  obstacle_towr.srdf  plateforme_not_flat.srdf  plateforme_surfaces.srdf  roomWall.srdf  slope_towr.srdf  stairs_towr.srdf
srdf/ori/: container_floor.srdf  modular_palet_flat.srdf  modular_palet_low_collision.srdf  race_slopes_container.srdf
srdf/tests/: baxter_simple.srdf
srdf/ur_benchmark/: pokeball.srdf
urdf/: beam.urdf  beam_support.urdf  buggy.urdf  placard-vertical.urdf  placard.urdf  scene.urdf
urdf/construction_set/: cylinder.srdf  cylinder.urdf  cylinder_08.urdf  cylinder_13.urdf  ground.urdf  sphere.urdf
urdf/drawer_desk/: case.urdf.xacro  desk.urdf  desk.urdf.xacro  desk_obsolete.urdf.xacro  drawer.urdf.xacro  table.urdf.xacro  table_leg.urdf.xacro
urdf/hrp2/: floor_as_mesh.urdf
urdf/multicontact/: antfarm_firstLevel.urdf  bauzil_ramp_simplified.urdf  bauzil_stairs.urdf  bauzil_stairs_10cm.urdf  bauzil_stairs_collision.urdf  box.urdf  box_rom.urdf  car.urdf  climb.urdf  cross_gap.urdf  cubeWorld3.urdf  cubeWorld_nonCoplanar2.urdf  darpa.urdf  darpa_no_ctc_mid.urdf  darpa_no_mid.urdf  downSlope2.urdf  flat_hole.urdf  flat_step.urdf  floor_bauzil_obstacles.urdf  ground.urdf  ground_bigStep.urdf  ground_jump_easy.urdf  ground_jump_easy_old.urdf  ground_jump_low.urdf  ground_jump_med.urdf  ground_with_bridge.urdf  ground_with_cylinder.urdf  groundcrouch.urdf  maze.urdf  maze2.urdf  maze_easy.urdf  obstacle_towr.urdf  ori_plinth.urdf  plane.urdf  polaris.urdf  random_scene_10x10_V3.urdf  random_scene_10x10_V5.urdf  rubbles_4.urdf  rubbles_stairs_1.urdf  rubbles_stairs_2.urdf  (+16 more)
urdf/ori/: modular_palet_low.urdf  modular_palet_low_obstacles.urdf  slalom1.urdf  slalom2.urdf
urdf/tests/: baxter_simple.urdf
urdf/ur_benchmark/: box.urdf  ground.urdf  obstacle_sphere.urdf  obstacles.urdf  pokeball.urdf  table.urdf  wall.urdf
