<package>
  <name>hpp_environments</name>
  <version>0.0.0</version>
  <description>
    environments for HPP.
  </description>
  <author>Joseph Mirabel</author>
  <maintainer email="hpp@laas.fr">Joseph Mirabel</maintainer>
  <license>LGPL v2</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hpp-corbaserver</build_depend>
</package>
