<?xml version='1.0'?>
 <package format='2'>
 <name>hpp-environments</name>
 <version>4.11.1</version>
 <description>Environments for the humanoid path planner platform. </description>

 <maintainer email='hpp@laas.fr'>Joseph Mirabel</maintainer>
 <license>LGPL</license>

 <!-- <url type='website'>https://github.com/humanoid-path-planner/hpp-environments </url> -->

 <author>Joseph Mirabel</author>
 <author>Florent Lamiraux et al.</author>

 <buildtool_depend>catkin</buildtool_depend>
 </package>
