<?xml version='1.0'?>
 <package format='2'>
 <name>hpp-environments</name>
 <version>4.13.0</version>
 <description>Environments for the humanoid path planner platform. </description>

 <maintainer email='hpp@laas.fr'>Joseph Mirabel</maintainer>
 <license>LGPL</license>

 <!-- <url type='website'>https://github.com/humanoid-path-planner/hpp-environments </url> -->

 <author>Joseph Mirabel</author>
 <author>Florent Lamiraux et al.</author>

 <buildtool_depend>catkin</buildtool_depend>
 <build_depend>example-robot-data</build_depend>
 </package>
