[build-system]
build-backend = "cmeel.build"
requires = [
  "cmeel-boost[build] ~= 1.83.0",
  "cmeel[build]",
  "example-robot-data[build]"
]

[project]
dependencies = [
  "cmeel-boost ~= 1.83.0",
  "example-robot-data"
]
description = "Environments for the humanoid path planner platform."
license = "BSD-2-Clause"
name = "hpp-environments"
version = "5.2.0"

[tool.ruff]
extend-exclude = ["cmake"]

[tool.ruff.lint]
extend-select = ["I", "NPY", "RUF", "UP", "W"]

[tool.tomlsort]
all = true
